Adjusted buttons on AuraHeader

--- a/clientFolder/force-app/main/default/aura/AuraHeader/AuraHeader.css
+++ b/clientFolder/force-app/main/default/aura/AuraHeader/AuraHeader.css
@@ -8,6 +8,6 @@
   text-align:center;
 }
 
-.cAuraHeader.navButton {
---sds-c-button-neutral-color-background-active: black;
+.THIS.navButton{
+    color:black;
 }
