--- a/clientFolder/force-app/main/default/aura/AuraHeader/AuraHeader.cmp
+++ b/clientFolder/force-app/main/default/aura/AuraHeader/AuraHeader.cmp
@@ -82,18 +82,21 @@
     <lightning:navigation aura:id="navService" /> <br /> <br />
     <lightning:button
       variant="base"
+      class="navButton"
       label="| Home |"
       title="Brand action"
       onclick="{! c.homeClick }"
     />
     <lightning:button
       variant="base"
+      class="navButton"
       label="Dealership |"
       title="Brand action"
       onclick="{! c.dealershipClick }"
     />
     <lightning:button
       variant="base"
+      class="navButton"
       label="Pricebook Entry |"
       title="Brand action"
       onclick="{! c.pbookClick }"
@@ -101,6 +104,7 @@
     <aura:if isTrue="{!v.renderCampButton}">
       <lightning:button
         variant="base"
+        class="navButton"
         label="Campaign Page |"
         title="Brand action"
         onclick="{! c.campClick }"
@@ -108,18 +112,21 @@
     </aura:if>
     <lightning:button
       variant="base"
+      class="navButton"
       label="Schedule an Appointment |"
       title="Brand action"
       onclick="{! c.schedAppClick }"
     />
     <lightning:button
       variant="base"
+      class="navButton"
       label="Product Catalogue |"
       title="Brand action"
       onclick="{!c.catalogClick}"
     />
     <lightning:button
       variant="base"
+      class="navButton"
       label="Start a Career |"
       title="Brand action"
       onclick="{! c.careerAppClick }"
@@ -127,6 +134,7 @@
     <aura:if isTrue="{!v.renderLoginButton}">
       <lightning:button
         variant="base"
+        class="navButton"
         label="Login |"
         title="Login action"
         onclick="{! c.loginClick }"
@@ -135,6 +143,7 @@
       <aura:set attribute="else">
         <lightning:button
           variant="base"
+          class="navButton"
           label="Logout |"
           title="Logout action"
           onclick="{! c.logoutClick }"
